--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "killer-sudoku-calc",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
